--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class="screen" id="main-menu">
             <h2 class="logo">Mnemo<br/>Jewels</h2>
             <ul class="menu">
-                <li><button class="nav" name="play-menu">Play</button>
-                <li><button class="nav" name="settings">Settings</button>
-                <li><button class="nav" name="about">About</button>
-                <li><button class="nav" name="exit-screen">Exit</button>
+                <li><button class="nav bt_green" name="play-menu">play</button>
+                <li><button class="nav bt_blue" name="settings">settings</button>
+                <li><button class="nav bt_yellow" name="about">about</button>
+                <li><button class="nav bt_red" name="exit-screen">exit</button>
             </ul>
         </div>
         
@@ -50,10 +50,10 @@
         <div class="screen" id="play-menu">
             <h2 class="logo">Mnemo<br/>Jewels</h2>
             <ul class="menu">
-                <li><button class="nav" name="game_classic">Classic</button>
-                <li><button class="nav" name="game_review">Review</button>
-                <li><button class="nav" name="game_5-min">5 min</button>
-                <li><button class="nav" name="game_10-clears">10 Clears</button>
+                <li><button class="nav bt_green" name="game_classic">classic</button>
+                <li><button class="nav bt_blue" name="game_review">review</button>
+                <li><button class="nav bt_purple" name="game_5-min">20 words</button>
+                <li><button class="nav bt_orange" name="game_10-clears">10 minutes</button>
                 <li><button class="back">Back</button></li>
             </ul>
         </div>
