implemented tests for game end conditions and adding new groups over time

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <ul class="menu">
                 <li><button class="nav bt_green" name="game_classic">classic</button>
                 <li><button class="nav bt_blue" name="game_review">review</button>
-                <li><button class="nav bt_purple" name="game_5-min">20 words</button>
-                <li><button class="nav bt_orange" name="game_10-clears">10 minutes</button>
+                <li><button class="nav bt_purple" name="game_5-min">5 minutes</button>
+                <li><button class="nav bt_orange" name="game_10-clears">10 clears</button>
                 <li><button class="back">Back</button></li>
             </ul>
         </div>
