skipping game mode menu for now

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="screen" id="main-menu">
             <h2 class="logo">Mnemo<br/>Jewels</h2>
             <ul class="menu">
-                <li><button class="nav bt_green" name="play-menu">play</button>
+                <li><button class="nav bt_green" name="game_classic">play</button>
                 <li><button class="nav bt_blue" name="settings">settings</button>
                 <li><button class="nav bt_yellow" name="about">about</button>
                 <li><button class="nav bt_red" name="exit-screen">exit</button>
@@ -94,6 +94,14 @@
             TO DO<br/>
             <button class="back">Back</button>
         </div>
+
+        <!-- Exit Screen -->
+
+        <div class="screen" id="exit-screen">
+            <h2 class="logo">Mnemo<br/>Jewels</h2>
+            TO DO
+        </div>
+
     </div>
 </body>
 </html>
