option to recreate DB

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
         </div>
         <div class="screen" id="settings">
             TO DO<br/>
-            <button class="back">Back</button>
+            <ul class="menu">
+                <li><button id="clear" class="bt_green">Recreate DB</button>
+                <li><button class="back">Back</button></li>
+            </ul>
         </div>
         <div class="screen" id="about">
             TO DO<br/>
