--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class="screen" id="main-menu">
             <h2 class="logo">Mnemo<br/>Jewels</h2>
             <ul class="menu">
-                <li><button class="nav bt_green" name="game_classic">play</button>
-                <li><button class="nav bt_blue" name="settings">settings</button>
-                <li><button class="nav bt_yellow" name="about">about</button>
-                <li><button class="nav bt_red" name="exit-screen">exit</button>
+                <li><button class="nav bt_green" name="game_classic">Play</button>
+                <li><button class="nav bt_blue" name="settings">Settings</button>
+                <li><button class="nav bt_yellow" name="about">About</button>
+                <li><button class="nav bt_red" name="exit-screen">Exit</button>
             </ul>
         </div>
         
