Created a debug module to temporarily hold debug stuff and added some very primitive time measurements

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <tr><td></td><td></td></tr>
                 <tr><td></td><td></td></tr>
             </table>
+            <div id="stats"></div>
         </div>
         <div class="screen" id="game_review">
             TO DO<br/>
