On mismatch, replace group by another group of same size and block events for a while

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <!-- Play Modes -->
         
         <div class="screen" id="game_classic">
+            <div id="stats"></div>
+            <div id="overlay"></div>
             <table id="board">
                 <tr><td></td><td></td></tr>
                 <tr><td></td><td></td></tr>
@@ -84,7 +86,6 @@
                 <tr><td></td><td></td></tr>
                 <tr><td></td><td></td></tr>
             </table>
-            <div id="stats"></div>
         </div>
         <div class="screen" id="game_review">
             TO DO<br/>
