Added stats about states

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
         <div class="screen" id="settings">
             TO DO<br/>
             <ul class="menu">
-                <li><button id="clear" class="bt_green">Recreate DB</button>
+                <li><button id="clear" class="bt_green">Recreate DB</button></li>
+                <li><button id="showStats" class="bt_blue">Show stats</button></li>
                 <li><button class="back">Back</button></li>
             </ul>
+            <div id="output"></div>
         </div>
         <div class="screen" id="about">
             TO DO<br/>
