Made possible to add/remove cards by editing testWords.js

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         <div class="screen" id="settings">
             TO DO<br/>
             <ul class="menu">
-                <li><button id="clear" class="bt_green">Recreate DB</button></li>
-                <li><button id="showStats" class="bt_blue">Show stats</button></li>
+                <li><button id="synch" class="bt_green">Synchronize</button></li>
+                <li><button id="clear" class="bt_blue">Recreate DB</button></li>
+                <li><button id="showStats" class="bt_purple">Show stats</button></li>
                 <li><button class="back">Back</button></li>
             </ul>
             <div id="output"></div>
