Made app adjust itself to window size

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="screen" id="settings">
-            TO DO<br/>
+            <h2 class="logo">Mnemo<br/>Jewels</h2>
             <ul class="menu">
                 <li><button id="synch" class="bt_green">Synchronize</button></li>
                 <li><button id="clear" class="bt_blue">Recreate DB</button></li>
