Preloading jewel image on splash screen

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div id="top-container">
 
-        <div class="screen" id="splash-screen">
+        <div class="screen active" id="splash-screen">
             <h1 class="logo">Mnemo<br/>Jewels</h1>
-            <span class="continue">Click to continue</span>
+            <span class="continue hidden">Click to continue</span>
         </div>
 
         <div class="screen" id="main-menu">
