Settings screen / deck selection

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <ul class="menu">
                 <li><button class="nav bt_red" name="game">Play</button>
                 <li><button class="nav bt_yellow" name="deck-stats">Learning Stats</button></li>
-                <li><button class="nav bt_blue" name="top-scores">Top Scores</button></li>
-                <li><button class="nav bt_green" name="about">About</button>
+                <li><button class="nav bt_green" name="top-scores">Top Scores</button></li>
+                <li><button class="nav bt_blue" name="settings">Settings</button>
+                <li><button class="nav bt_purple" name="about">About</button>
             </ul>
         </div>
 
@@ -75,6 +76,19 @@
                 </table>
             </div>
             <ul class="menu">
+                <li><button class="back">Back</button></li>
+            </ul>
+        </div>
+
+        <div class="screen" id="settings">
+            <h2 class="logo small">Mnemo<br/>Jewels</h2>
+            <div class="screen-content">
+                <h3>Settings</h3>
+                <label for="selected-deck" class="medium-text">Language to learn</label>
+                <select id="selected-deck"></select>
+            </div>
+            <ul class="menu">
+                <li><button class="nav continue" name="main-menu">Continue</button>
                 <li><button class="back">Back</button></li>
             </ul>
         </div>
