Added a loading spinner to the splash screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="screen active" id="splash-screen">
             <h1 class="logo">Mnemo<br/>Jewels</h1>
             <span class="continue hidden">Click to continue</span>
+            <div class="spinner"></div>
         </div>
 
         <div class="screen" id="main-menu">
@@ -68,9 +69,11 @@
                 <h3>Top Scores</h3>
                 <table>
                     <thead>
-                      <td></td>
-                      <td>Score</td>
-                      <td>Duration</td>
+                        <tr>
+                            <td></td>
+                            <td>Score</td>
+                            <td>Duration</td>
+                        </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
