Refactoring the whole project (WIP)

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>MnemoJewels</title>
-    <link rel="stylesheet" href="styles/main.css" />
-    <link href="styles/donut-chart.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles/fontfaces.css"/>
-    <script src="scripts/lib/modernizr.js"></script>
-    <script src="scripts/loader.js"></script>
+    <link rel="stylesheet" href="target/bundle.css" />
 </head>
 <body>
     <div id="top-container">
@@ -114,5 +110,6 @@
         </div>
 
     </div>
+    <script src="target/bundle.js"></script>
 </body>
 </html>
